2012-03-26  Anton Arapov  <anton@redhat.com>

	* man/dmidecode.8: Add missing DMI type introduced with SMBIOS 2.7+, and
	  include the information about the extra output when dmidecode is run
	  on a hardware that has non-supported SMBIOS version.

2012-03-12  Anton Arapov  <anton@redhat.com>

	* dmioem.c: Add "PXE" to the HP OEM Type 209 output so it is similar to
	  the "iSCSI" description in HP OEM Type 221. Patch from Naga Chumbalkar.

2011-11-18  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Properly print the hexadecimal value of invalid
	  string characters.

2011-11-14  Anton Arapov  <anton@redhat.com>

	* dmidecode.c: Make dmi_chassis_type aware of the lock bit.
	  Patch from Stefan Tauner.
	* config.h: Haiku dropped the _BEOS_ definition in favor of its own
	  platform identification _HAIKU_. Patch from Francois Revol.

2011-04-20  Jean Delvare  <khali@linux-fr.org>

	Update to support SMBIOS specification version 2.7.1.

	* dmidecode.c: Add 6 AMD processor families (DMI type 4).
	* dmidecode.c: Add cache associativity value
	  "20-way Set-associative" (DMI type 7).
	* dmidecode.c: Add PCI Express 3 slot types (DMI type 9).

2011-01-25  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix boundary checks of memory array location codes
	  (DMI type 16). Reported by Andrey Matveyev.

2010-11-24  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Assume that the max power capacity is expressed in
	  Watts, not milliWatts (DMI type 39). The specification isn't
	  clear about the actual unit, but the only implementation I've
	  seen (HP Proliant G7) clearly uses Watts. Also, using milliWatts
	  would limit the max value that can be stored to 32 W, which
	  doesn't make much sense.
	* dmidecode.c: Fix offset of partition width (DMI type 19).
	* dmidecode.c: Decode BIOS language information flags
	  (DMI type 13).
	* dmidecode.c: Fix CPU flags mask (DMI type 4).
	* dmidecode.c: Reword "PCI Express Gen 2" to just "PCI Express 2"
	  (DMI type 9).